<resources>
    <string name="app_name">DiceRollerv2</string>
    <string name="roll">Roll</string>
    <string name="next_dice">NEXT DICE</string>
    <string name="back_dice">BACK DICE</string>
    <string name="_5">-5</string>
    <string name="_1">-1</string>
    <string name="positively1">+1</string>
    <string name="positively5">+5</string>
    <string name="selectedMod">Selected Modificator</string>
    <string name="clear">Clear</string>
</resources>