<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:weightSum="5">


        <ImageView
            android:id="@+id/diceImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/d4_1" />

        <Button
            android:id="@+id/btnRoll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roll" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:id="@+id/btnBackDice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/back_dice"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btnNextDice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/next_dice"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:id="@+id/btnMod_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/_5"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btnMod_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/_1"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btnMod1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/positively1"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btnMod5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/positively5"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>